fixed alignment issue

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -189,7 +189,7 @@ hr {
 }
 
 .card select {
-  margin-top: 9px !important;
+  margin-bottom: 9px !important;
   color: grey;
 }
 
